Make power module tick + UI fixes